hphp/hack/test/typecheck/naming_fail_for.php.exp
File "naming_fail_for.php", line 6, characters 8-9:
Variable $x is undefined, or there exists at least one control flow path reaching this point which does not define $x. (Naming[2050])
