hphp/hack/test/typecheck/naming_fail_for.php
<?hh // strict

function foo(): void {
  for (; false; $x = 1) {
  }
  echo $x;
}
